--- a/wordpress/wp-content/themes/ben-lido2/interactive/src/styles/_category-list.scss
+++ b/wordpress/wp-content/themes/ben-lido2/interactive/src/styles/_category-list.scss
@@ -1,6 +1,7 @@
 .category-list {
   a {
     color: $blumine;
+    letter-spacing: normal;
     &:visited,
     &:hover,
     &:focus {
