--- a/wordpress/wp-content/themes/ben-lido2/interactive/src/styles/woo/_woo_product-tile.scss
+++ b/wordpress/wp-content/themes/ben-lido2/interactive/src/styles/woo/_woo_product-tile.scss
@@ -2,8 +2,9 @@
   &-tile {
     &-header {
       // margin-bottom: $unit-8;
-      margin-bottom: 0;
-      min-height: 40px;
+      // margin-bottom: 0;
+      // min-height: 40px;
+      display: none;
     }
     &-link {
       min-height: 182px;
@@ -44,6 +45,8 @@
       // min-height: 84px;
       font-weight: 400;
       font-size: 14px;
+      letter-spacing: normal;
+      line-height: normal;
       margin: $unit-8 0;
       color: $grey;
     }
